--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,22 @@
     </style>
 
     <style name="Theme.Proyectocitas_medicas" parent="Base.Theme.Proyectocitas_medicas" />
+    <style name="MenuButtom" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:layout_height">70dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:paddingLeft">60dp</item>
+        <item name="android:paddingRight">60dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+    <style name="NextButtom" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="android:layout_height">55dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:paddingLeft">60dp</item>
+        <item name="android:paddingRight">60dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+
+
 </resources>
